--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,10 @@
   @apply bg-gray-800 text-white rounded-full px-6 py-2;
 }
 
+.btn-icon {
+  @apply w-[30px] h-[30px] p-0 text-black rounded-full hover:bg-gray-300;
+}
+
 .btn-trans:hover {
   @apply bg-gray-100 rounded-full transition-all ease-linear duration-100;
 }
@@ -93,6 +97,10 @@
 
 .btn.btn-loading {
   @apply cursor-not-allowed opacity-50;
+}
+
+.btn.btn-red {
+  @apply bg-red-600 hover:opacity-70 text-white;
 }
 
 .btn.btn-loading:hover {
