--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,12 @@
 }
 
 @tailwind components;
+.container {
+  @apply px-5;
+}
+.flex-center {
+  @apply flex justify-center items-center;
+}
 
 .btn {
   @apply px-4 py-2 rounded-md  flex justify-center items-center  first-letter:uppercase;
